--- a/app/views/editor/angular/_preview_controller.html.erb
+++ b/app/views/editor/angular/_preview_controller.html.erb
@@ -1,2 +1,2 @@
-  <div id="preview" data-ng-controller='PreviewController' ng-bind-html-unsafe="preview">
+  <div id="preview" data-ng-controller='PreviewController' ng-bind-html="previewHtml()">
   </div>
