--- a/app/views/editor/angular/_nav_bar.html.erb
+++ b/app/views/editor/angular/_nav_bar.html.erb
@@ -1,7 +1,7 @@
   <div id="nav" class="nav-bar" ng-controller="NavBarController">
     <div class="status">
       <div class="btn-group dropup">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"  ng-click='$emit("showMenu", "Browser")'>
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
           <img class='avatar' ng-src="{{avatar}}" alt="{{user.login}}" ng-show="loading == false">
           <img class='avatar' ng-src="<%= image_path('spinner.gif', class: 'spinner') %>" alt="{{user.login}}" ng-show="loading == true">
 
