--- a/app/views/layouts/editor.html.erb
+++ b/app/views/layouts/editor.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-ng-app='Application'>
 <head>
-  <title>Writing.is</title>
+  <title>Arturo.io</title>
   <%= stylesheet_link_tag    "editor" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
