--- a/app/views/editor/angular/_editor_controller.html.erb
+++ b/app/views/editor/angular/_editor_controller.html.erb
@@ -1,3 +1,3 @@
-  <div id="editor" data-ng-controller='EditorController'>
-    <%= render 'code' %>
+  <div id="editor" ng-controller='EditorController'>
+
   </div>
