--- a/app/views/editor/angular/_nav_bar.html.erb
+++ b/app/views/editor/angular/_nav_bar.html.erb
@@ -1,25 +1,12 @@
   <div id="nav" class="nav-bar" ng-controller="NavBarController">
     <div class="status">
-      <div class="btn-group dropup">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-          <img class='avatar' ng-src="{{avatar}}" alt="{{user.login}}" ng-show="loading == false">
-          <img class='avatar' ng-src="<%= image_path('spinner.gif', class: 'spinner') %>" alt="{{user.login}}" ng-show="loading == true">
+      <button type="button" class="button tiny radius" ng-click="$emit('showMenu', 'Pending')">
+        <img class='avatar' ng-src="{{avatar}}" alt="{{user.login}}" ng-show="loading == false">
+        <img class='avatar' ng-src="<%= image_path('spinner.gif', class: 'spinner') %>" alt="{{user.login}}" ng-show="loading == true">
 
-          {{user.login}}
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu pull-right">
-          <li><a href='#' ng-click='$emit("showMenu", "Browser")'>File Browser</a></li>
-          <li><a href='#' ng-click='$emit("showMenu", "Pending")'>Pending Changes</a></li>
-          <li><a href='#' ng-click='$emit("showMenu", "History")'>History</a></li>
-          <li><a href='#' ng-click='$emit("showMenu", "Assets")'>Assets</a></li>
-          <li><a href='#' ng-click='$emit("showMenu", "Assets")'>Reset</a></li>
-          <li class="divider"></li> 
-          <li><%= link_to 'Change Repos', repos_path %></li>
-          <li class="divider"></li> 
-          <li><a href='#'>Logout</a></li>
-        </ul>
-      </div>
+        {{user.login}}
+        <span class="caret"></span>
+      </button>
     </div>
 
   </div>
