--- a/app/views/layouts/editor.html.erb
+++ b/app/views/layouts/editor.html.erb
@@ -6,8 +6,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body data-no-turbolink="true">
-
 <%= yield %>
-
+<script type="text/javascript" src="//use.typekit.net/jov4cdg.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </body>
 </html>
