--- a/app/assets/stylesheets/editor/global.scss
+++ b/app/assets/stylesheets/editor/global.scss
@@ -1,15 +1,10 @@
 @import 'font-awesome';
-@import url(//fonts.googleapis.com/css?family=Droid+Sans+Mono);
 body {
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: 'Droid Sans Mono', sans-serif;
-}
-
-#editor, #preview {
-  margin: 0;
+  font-family: "open-sans",sans-serif;
 }
 
 #editor {
@@ -20,8 +15,9 @@ body {
   top:0;
   left:0;
 
-  font-size: .85em;
-  line-height: 1.4em;
+  margin: 0;
+  font-size: .8em;
+  line-height: 1.5em;
 }
 
 #preview  {
@@ -34,10 +30,10 @@ body {
   top: 0;
   right: 0;
 
+  margin: 0;
   padding-left: 1.7em;
   padding-right: 1.7em;
   border-left: 1px solid #cfcfcf;
-
   p {
     max-width: none;
   }
@@ -83,6 +79,7 @@ body {
     padding: .5em;
     float: right;
     .button {
+      font-size:.8em;
       margin:0;
       .avatar {
         width: 18px;
