--- a/app/views/editor/angular/_menu_panel.html.erb
+++ b/app/views/editor/angular/_menu_panel.html.erb
@@ -1,11 +1,12 @@
     <div id='menu-panel' data-ng-controller='MenuPanelController'>
       <div class='menu-header'>
-        <ul class="nav nav-pills">
-          <li ng-repeat="item in items" ng-class="{active: isActive(item)}">
-            <a ng-click="$emit('menuSelect', item)" href="#">{{item}}</a>
-          </li>
-        </ul>
+        <dl class="sub-nav">
+          <dd ng-repeat="item in items" ng-class="{active: isActive(item)}">
+          <a ng-click="$emit('menuSelect', item)" href="#">{{item}}</a>
+          </dd>
+        </dl>
       </div>
+
       <%= render 'editor/angular/pending_controller' %>
       <%= render 'editor/angular/browser_controller' %>
       <%= render 'editor/angular/history_controller' %>
