--- a/app/assets/stylesheets/lib/jquery.growl.css
+++ b/app/assets/stylesheets/lib/jquery.growl.css
@@ -4,7 +4,9 @@
  */
 #growls {
   z-index: 50000;
-  position: fixed; }
+  position: fixed;
+  font-family: "open-sans",sans-serif;
+}
   #growls.default {
     top: 10px;
     right: 10px; }
@@ -22,7 +24,7 @@
     right: 10px; }
 
 .growl {
-  opacity: 0.8;
+  opacity: 0.9;
   position: relative;
   border-radius: 4px;
   -webkit-transition: all 0.4s ease-in-out;
